<resources>
    <string name="app_name">Bitcoin</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="refresh">refresh</string>
    <string name="calculator">calculator</string>
    <string name="last_updated"><![CDATA[
    Last updated:
    <b>%s</b>
    ]]></string>
    <string name="bitcoin_value">Bitcoin</string>
    <string name="value">Value</string>
    <string name="back">back</string>
    <string name="just_now">less than minute ago</string>
    <string name="less_than_minute">less than minute ago</string>
    <string name="minute_ago">minute ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="less_hour_ago">less than hour ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="hours_ago">%d hours ago></string>
    <string name="yesterday">yesterday</string>
    <string name="week_ago">week ago</string>
    <string name="weeks_ago">%d weeks ago</string>
    <string name="long_time_ago">long time ago</string>
    <string name="last_updated_unknown">Last updated: unknown</string>
    <string name="update_time_null">update time null</string>
    <string name="hide">HIDE</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="gbp">GBP</string>
    <string name="ratio">ratio</string>
    <string name="exchange">exchange</string>
    <string name="what_is_bitcoin">What is bitcoin?</string>
    <string name="about_bitcoin">Bitcoin is a consensus network that enables a new payment system and a completely digital money. It is the first decentralized peer-to-peer payment network that is powered by its users with no central authority or middlemen. From a user perspective, Bitcoin is pretty much like cash for the Internet. Bitcoin can also be seen as the most prominent triple entry bookkeeping system in existence.</string>
</resources>
